Adding wip poll example

--- a/example/poll/index.html
+++ b/example/poll/index.html
@@ -3,13 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Render</title>
+    <title>Poll</title>
   </head>
   <body>
-    <h1>Examples</h1>
-    <ul>
-      <li><a href="./poll/index.html">Poll</a></li>
-      <li><a href="./todo/index.html">Todo</a></li>
-    </ul>
+    <div id="root"></div>
+    <script src="main.ts"></script>
   </body>
 </html>
