--- a/example/todo/index.html
+++ b/example/todo/index.html
@@ -6,10 +6,7 @@
     <title>Render</title>
   </head>
   <body>
-    <h1>Examples</h1>
-    <ul>
-      <li><a href="./poll/index.html">Poll</a></li>
-      <li><a href="./todo/index.html">Todo</a></li>
-    </ul>
+    <div id="root"></div>
+    <script src="main.ts"></script>
   </body>
 </html>
